--- a/test.html
+++ b/test.html
@@ -1,7 +1,8 @@
-<html>
+<!-- fix : <html> element does not have a [lang] attribute -->
+<html lang="en">
 <head>
 </head>
 <body>
-  Hello World!
+    Hello World!
 </body>
 </html>
