commit message goes here

--- a/test.html
+++ b/test.html
@@ -1,8 +1,20 @@
-<!-- fix : <html> element does not have a [lang] attribute -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A brief description of the page for search engines.">
+  <title>Your Page Title</title>
+  <style>
+    body {
+      font-size: 16px; /* Ensure legible font size (≥12px) for better accessibility */
+      line-height: 1.5; /* Improve readability */
+      font-family: Arial, sans-serif;
+    }
+  </style>
 </head>
 <body>
-    Hello World!
+  <h1>Welcome to Your Page</h1>
+  <p>This is a sample text that ensures proper font size and responsive design for mobile users.</p>
 </body>
 </html>
