--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A brief description of the page for search engines.">
   <title>Your Page Title</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body {
       font-size: 16px; /* Ensure legible font size (≥12px) for better accessibility */
@@ -14,7 +15,9 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Your Page</h1>
-  <p>This is a sample text that ensures proper font size and responsive design for mobile users.</p>
+  <main>
+    <h1>Welcome to Your Page</h1>
+    <p>This is a sample text that ensures proper font size and responsive design for mobile users.</p>
+  </main>
 </body>
 </html>
