--- a/test.html
+++ b/test.html
@@ -1,15 +1,22 @@
-<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+  Hello World!
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A brief description of the page for search engines.">
   <title>Your Page Title</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body {
-      font-size: 16px; /* Ensure legible font size (≥12px) for better accessibility */
-      line-height: 1.5; /* Improve readability */
+      font-size: 16px;
+      line-height: 1.5;
       font-family: Arial, sans-serif;
     }
   </style>
@@ -20,4 +27,4 @@
     <p>This is a sample text that ensures proper font size and responsive design for mobile users.</p>
   </main>
 </body>
-</html>
+</html> -->
