commit message goes here

--- a/test.html
+++ b/test.html
@@ -1,12 +1,4 @@
-<html>
-<head>
-</head>
-<body>
-  Hello World!
-</body>
-</html>
-
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -27,4 +19,4 @@
     <p>This is a sample text that ensures proper font size and responsive design for mobile users.</p>
   </main>
 </body>
-</html> -->
+</html>
